--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 
 buildscript {
     ext {
-        version_navigation = '2.1.0-alpha04'
+        version_navigation = '2.0.0'
         lifecycle_version = "2.0.0"
         version_glide = "4.8.0"
         kotlin_version = '1.3.21'
