--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
         kotlin_version = '1.3.21'
         version_retrofit = "2.5.0"
         version_realm = "5.11.0"
+        version_moshi = "1.8.0"
 
     }
 
