--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
-apply plugin: "androidx.navigation.safeargs.kotlin"
+apply plugin: "androidx.navigation.safeargs"
 
 apply plugin: 'kotlin-kapt'
 
@@ -45,9 +45,9 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
 
     // Navigation
+    implementation "android.arch.navigation:navigation-fragment-ktx:$version_navigation"
+    implementation "android.arch.navigation:navigation-ui-ktx:$version_navigation"
 
-    implementation "androidx.navigation:navigation-fragment:$version_navigation"
-    implementation "androidx.navigation:navigation-ui:$version_navigation"
 
     //moshi
     implementation "com.squareup.moshi:moshi:$version_moshi"
