--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 
 buildscript {
     ext {
-        version_navigation = '2.0.0'
+        version_navigation = '1.0.0'
         lifecycle_version = "2.0.0"
         version_glide = "4.8.0"
         kotlin_version = '1.3.21'
@@ -20,7 +20,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$version_navigation"
+        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:$version_navigation"
         classpath "io.realm:realm-gradle-plugin:$version_realm"
 
         // NOTE: Do not place your application dependencies here; they belong
