--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,9 +58,7 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$version_retrofit"
     implementation "com.squareup.retrofit2:converter-moshi:$version_retrofit"
 
-    //gilde
-    implementation 'com.github.bumptech.glide:glide:4.9.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+    //picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
 
 
